# snife

./: CHANGELOG.md  brackhs.cabal  snife.cabal
app/: Main.hs
src/: Snife.hs
src/Control/: Comonad.hs
src/Data/: LoopList.hs  Zipper.hs
src/Snife/: AppTypes.hs  Draw.hs  Event.hs  Init.hs  Input.hs  Theme.hs  Theming.hs  Types.hs  Util.hs  Utils.hs
src/Snife/Logic/: Cells.hs  EventHandler.hs  Snake.hs  State.hs
