cabal-version:      3.0
name:               snife
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Trouble-Truffle
maintainer:         perigordtruffle73198@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
  default-language: Haskell2010
  other-extensions:
    OverloadedStrings
    TemplateHaskell
    TypeApplications

  ghc-options:      -threaded -Wall
  build-depends:
    , ansi-terminal
    , base              ^>=4.14.3.0
    , brick
    , containers
    , linear
    , lens
    , microlens
    , microlens-th
    , random
    , sequence
    , template-haskell
    , text
    , transformers
    , vty

executable snife
  import:         common
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  snife

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    Snife
    Snife.AppTypes
    Snife.Draw
    Snife.Init
    Snife.Input
    Snife.Logic.Cells
    Snife.Logic.EventHandler
    Snife.Logic.Snake
    Snife.Logic.State
    Snife.Theming
    Snife.Utils
