cabal-version:      2.4
name:               snife
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Trouble-Truffle
maintainer:         perigordtruffle7318@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Control.Comonad
    Data.Zipper
    Snife.Draw
    Snife.Event
    Snife.Init
    Snife.Theme
    Snife.Types
    Snife.Util

  build-depends:
    , base          ^>=4.14.3.0
    , brick
    , containers
    , lens
    , stm
    , transformers
    , vty

  hs-source-dirs:   src
  default-language: Haskell2010

executable snife
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.14.3.0
    , brick
    , containers
    , lens
    , snife
    , stm
    , transformers
    , vty

  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
